Updated base.html and added external CSS

--- a/west_end_market/templates/base.html
+++ b/west_end_market/templates/base.html
@@ -1,5 +1,113 @@
-<!--
-This is a trial push 
-from andreas' pc to eftichios
-repository
--->
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+        <link rel="stylesheet" type="text/css" href="vendors/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="vendors/css/palette.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="resourses/css/styleaddons.css">
+    
+        <title>Base template</title>
+    </head>
+  
+    <body>
+        <!-- SUGGESTED IMPLEMENTATION -->
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light light-primary-color">
+                <h1><a class="navbar-brand main-heading margin-right-40" style="color: #FF5722;" href="#">West End Market</a></h1>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">All Listings</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">School</a>
+                                <a class="dropdown-item" href="#">Electronics</a>
+                                <a class="dropdown-item" href="#">Clothing</a>
+                                <a class="dropdown-item" href="#">Homeware</a>
+                                <a class="dropdown-item" href="#">Sports</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Other</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-success my-2 my-sm-0 margin-right-40 block-button" type="submit">Search &#x1F50D;</button>
+                    </form>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-primary margin-right-20 block-button">Login</button>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-danger margin-right-20 block-button">Sign up</button>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        
+        <!-- DUMMY TEXT CONTAINER -->
+        <!-- Will be replaced by other templates -->
+        <div class="container">
+            <h3>Welcome!</h3>
+            <h5>Recent Listings:</h5>
+            <hr>
+            <div class="row">
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+                <div class="col-md-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="navbar footer" style="background-color: #212121;">
+            <!-- DUMMY FOOTER TEXT -->
+            <h3>FOOTER</h3>
+            <p>LLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
+            <p>Copyright: West End Market 2019</p>
+        </div>
+        
+        
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="vendors/js/bootstrap.js"></script>
+    </body>
+</html>
