--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -6,10 +6,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-        <link rel="stylesheet" type="text/css" href="vendors/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="vendors/css/palette.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/bootstrap.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/palette.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="resourses/css/styleaddons.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'resourses/css/styleaddons.css' %}">
     
         <title>
             West End Market - 
@@ -86,6 +86,6 @@
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="vendors/js/bootstrap.js"></script>
+        <script src="{% static 'vendors/js/bootstrap.js' %}"></script>
     </body>
 </html>
