--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -1,24 +1,64 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
-{% block title_block %}
-    Add a Listing
+{% block body_block %}
+<div class="container">
+    <form>
+        <div class="row"> 
+            <div class="col-md-4">
+                <h3>Create a Listing</h3>
+                        
+                <div class="text-center">
+                    <img class="img-thumbnail" src="images/placeholder.jpg" alt="image of the item" width=200 height=200>
+                </div>
+                        
+                <div class="text-center form-group">
+                    <label>Upload Image</label>
+                    <input type="file">
+                    <br>
+                    <p class="text-left helptext">Only png and jpg allowed</p>
+                </div>
+            </div>
+                    
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label>Title of item:</label>
+                    <input type="text" class="form-control" placeholder="Add Title (i.e bicycle)">
+                </div>
+                <div class="form-group">
+                    <label>Price:</label>
+                    <input type="text" class="form-control" placeholder="Add Price">
+                </div>
+                <div class="form-group">
+                    <label>Category:</label>
+                    <select class="form-control">
+                        <option value="school">School</option>
+                        <option value="electronics">Electronics</option>
+                        <option value="clothing">Clothing</option>
+                        <option value="homeware">Homeware</option>
+                        <option value="sports">Sports</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Postcode:</label>
+                    <input type="text" class="form-control" placeholder="Add Postcode (i.e G11 6QH)">
+                </div>
+                <div class="form-group">
+                    <label>Description:</label>
+                    <textarea class="form-control" placeholder="Add description"></textarea>
+                </div>
+                        
+                <div class="text-right">
+                    <button class="btn btn-primary" type="submit" >Submit</button>
+                </div>
+            </div>
+        </div>       
+    </form>    
+</div>  
 {% endblock %}
 
-{% block body_block %}
-    <h1>Add a Listing</h1>
-    <div>
-    <form id="listing_form" method="post" action="/west_end_market/add_listing/">
-        {% csrf_token %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-        {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}<br>
-        {% endfor %}
-        <input type="submit" name="submit" value="Create Listing" />
-    </form>
-    </div>
-{% endblock %}
+        
+        
+        
+        
