--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -3,18 +3,19 @@
 
 {% block body_block %}
 <div class="container">
-    <form>
-        <div class="row"> 
+    <form id="listing_form" method = 'post' enctype="multipart/form-data" action="{% url 'add_listing' %}">
+        {% csrf_token %}
+        <div class="row">
             <div class="col-md-4">
                 <h3>Create a Listing</h3>
                         
                 <div class="text-center">
-                    <img class="img-thumbnail" src="images/placeholder.jpg" alt="image of the item" width=200 height=200>
+                    <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=200 height=200>
                 </div>
                         
                 <div class="text-center form-group">
                     <label>Upload Image</label>
-                    <input type="file">
+                    <input id="id_picture" type="file" name="picture" onchange="readURL(this);">
                     <br>
                     <p class="text-left helptext">Only png and jpg allowed</p>
                 </div>
@@ -23,39 +24,57 @@
             <div class="col-md-8">
                 <div class="form-group">
                     <label>Title of item:</label>
-                    <input type="text" class="form-control" placeholder="Add Title (i.e bicycle)">
+                    <input id="id_title" type="text" class="form-control" placeholder="Add Title (i.e bicycle)" name="title">
                 </div>
                 <div class="form-group">
                     <label>Price:</label>
-                    <input type="text" class="form-control" placeholder="Add Price">
+                    <input id="id_price" type="text" class="form-control" placeholder="Add Price" name="price">
                 </div>
                 <div class="form-group">
                     <label>Category:</label>
-                    <select class="form-control">
-                        <option value="school">School</option>
-                        <option value="electronics">Electronics</option>
-                        <option value="clothing">Clothing</option>
-                        <option value="homeware">Homeware</option>
-                        <option value="sports">Sports</option>
-                        <option value="other">Other</option>
+
+                    <select id="id_category" class="form-control" name="category">
+                        {{form.category.1}}
+                        {{form.category.2}}
+                        <!--<option value="school">School</option>-->
+                        <!--<option value="electronics">Electronics</option>-->
+                        <!--<option value="clothing">Clothing</option>-->
+                        <!--<option value="homeware">Homeware</option>-->
+                        <!--<option value="sports">Sports</option>-->
+                        <!--<option value="other">Other</option>-->
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Postcode:</label>
-                    <input type="text" class="form-control" placeholder="Add Postcode (i.e G11 6QH)">
+                    <input id="id_postcode" type="text" class="form-control" placeholder="Add Postcode (i.e G11 6QH)" name="postcode">
                 </div>
                 <div class="form-group">
                     <label>Description:</label>
-                    <textarea class="form-control" placeholder="Add description"></textarea>
+                    <textarea id="id_description" class="form-control" placeholder="Add description" name="description"></textarea>
                 </div>
                         
                 <div class="text-right">
-                    <button class="btn btn-primary" type="submit" >Submit</button>
+                    <button class="btn btn-primary" type="submit" value="submit" >Submit</button>
                 </div>
             </div>
         </div>       
     </form>    
-</div>  
+</div>
+<script type="text/javascript">
+//previews the photo before upload, called when picture is selected
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function(e) {
+            $('#id_placeholder').attr({'src': e.target.result});
+        }
+
+    reader.readAsDataURL(input.files[0]);
+  }
+}
+
+</script>
 {% endblock %}
 
         
