--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -35,12 +35,35 @@ body { padding-bottom: 70px; }
 /* REUSABLE COMPONENTS */
 /* --------------------------------------------------- */
 
+h2{
+    color: #FF5722;
+}
+
 .margin-right-20 {
     margin-right: 20px;
 }
 
 .margin-right-40 {
     margin-right: 40px;
+}
+
+.margin-top-30 {
+    margin-top: 30px;
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+
+.desktop-block-button { 
+       width: 100%; 
+       display:block;
+       margin-right: 0;
+       margin-top: 0;
+    }
+
+.desktop-item {
+    text-align: left;
 }
 
 /* --------------------------------------------------- */
@@ -67,6 +90,15 @@ body { padding-bottom: 70px; }
        display:block;
        margin-right: 0;
        margin-top: 15px;
+    }
+    .item-box-mobile {
+        align-self: center;
+        width: 80%; 
+        display:block;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 15px;
+        text-align: center;
     }
 }
 
