--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -22,7 +22,8 @@
     <body>
         <!-- SUGGESTED IMPLEMENTATION -->
         <div>
-            <nav class="navbar navbar-expand-lg navbar-light light-primary-color">
+            <nav class="navbar navbar-expand-lg navbar-light light-primary-color margin-top-30">
+                <img src="{% static 'images/logo.png' %}" alt="image of the logo" width=auto height= 65px>
                 <h1><a class="navbar-brand main-heading margin-right-40" style="color: #FF5722;" href="#">West End Market</a></h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
