--- a/templates/west_end_market/index.html
+++ b/templates/west_end_market/index.html
@@ -16,30 +16,30 @@
     <hr>
     <div class="row">
         <div class="col-md-3">
-            <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+            <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
         </div>
         <div class="col-md-3">
-            <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+            <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
         </div>
         <div class="col-md-3">
-            <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+            <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
         </div>
         <div class="col-md-3">
-            <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+            <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
         </div>
     </div>
         <div class="row margin-top-30">
             <div class="col-md-3">
-              <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+              <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
             </div>
             <div class="col-md-3">
-              <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+              <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
             </div>
             <div class="col-md-3">
-              <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+              <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
             </div>
             <div class="col-md-3">
-              <img src="static\images\square300.jpg" class="img-fluid item-box-mobile" alt="square image">
+              <img src="{% static 'images\square300.jpg' %}" class="img-fluid item-box-mobile" alt="square image">
             </div>
         </div>
 </div>
