--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -12,7 +12,7 @@
         <div class="margin-top-bottom-10 row"> 
             <div class="col-md-2">
                 <div class="text-center">
-                    <img src="images/placeholder.jpg" alt="image of the item" width=100 height=100>
+                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
                 </div>
             </div>    
             <div class="text-box width-100 height-100 col-md-10">
@@ -23,7 +23,7 @@
         <div class="margin-top-bottom-10 row"> 
             <div class="col-md-2">
                 <div class="text-center">
-                    <img src="images/placeholder.jpg" alt="image of the item" width=100 height=100>
+                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
                 </div>
             </div>        
             <div class="text-box width-100 height-100 col-md-10">
@@ -34,7 +34,7 @@
         <div class="margin-top-bottom-10 row"> 
             <div class="col-md-2">    
                 <div class="text-center">
-                    <img src="images/placeholder.jpg" alt="image of the item" width=100 height=100>
+                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
                 </div>
             </div>        
             <div class="text-box width-100 height-100 col-md-10">
