updated templates title

--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -1,5 +1,9 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
+
+{% block title_block %}
+    Listing
+{% endblock %}
         
 {% block body_block %}
 <div class="container">
