--- a/templates/west_end_market/mylistings.html
+++ b/templates/west_end_market/mylistings.html
@@ -1,12 +1,16 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
-<title>
+<!--<title>
     West End Market - 
         {% block title_block %}
             West End Market Defult
         {% endblock %}
-</title>
+</title>-->
+
+{% block title_block %}
+    My Listings
+{% endblock %}
 
 {% block body_block %}   
 <div>
