--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -1,11 +1,15 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
+{% block title_block %}
+    User Profile
+{% endblock %}
+
 {% block body_block %}
 <div class="container">
     <form>
         <div class="row"> 
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-10">
                 <h3>Username's Listings</h3>
             </div>
         </div>
