--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -1,6 +1,10 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
+{% block title_block %}
+    Create Listing
+{% endblock %}
+
 {% block body_block %}
 <div class="container margin-top-30">
     <form id="listing_form" method = 'post' enctype="multipart/form-data" action="{% url 'add_listing' %}">
