--- a/templates/west_end_market/index.html
+++ b/templates/west_end_market/index.html
@@ -1,12 +1,12 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
-<title>
+<!--<title>
     West End Market - 
         {% block title_block %}
             West End Market Defult
         {% endblock %}
-</title>
+</title>-->
 
 {% block body_block %}
 
