--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -1,12 +1,6 @@
 {% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
-<!--        <title>
-            West End Market - 
-            {% block title_block %}
-                West End Market Defult
-            {% endblock %}
-        </title>-->
 
 {% block title_block %}
     Login
@@ -20,15 +14,16 @@
             <div class="container">
                 <div class="row margin-top-30">
                     <div class="col-md-5">
-                        <form>
+                        <form id="login_form" method="post" action="{% url 'login' %}">
+                            {% csrf_token %}
                             <div class="form-group">
-                              <label>Email Address</label>
-                              <input type="email" class="form-control" placeholder="youremail@goeshere.com">
+                              <label>Username</label>
+                              <input type="text" name="username" class="form-control" placeholder="Username">
                             </div>
 
                             <div class="form-group">
                               <label>Password</label>
-                              <input type="email" class="form-control" placeholder="Password">
+                              <input type="password" name="password" class="form-control" placeholder="Password">
                             </div>
                             <div>
                             <label>
@@ -36,7 +31,7 @@
                             </label>
                             </div>
                             <div>
-                                <button class="btn btn-primary block-button">Login</button>
+                                <button type="submit" value="submit" class="btn btn-primary block-button">Login</button>
                             </div>
                         </form>
                     </div>
@@ -56,7 +51,7 @@
                 </div>
                 <div class="margin-top-30">
                 <h5 class="text-center">If you do not have an account, <a href="#">click here</a> to register</h5>
-                
+
                 </div>
             </div>
         </div>
