added title icon

--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/palette.css' %}">
         <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'resourses/css/styleaddons.css' %}">
-    
+        <link rel="shortcut icon" href="{% static 'images/karotsi.ico' %}"/>
+        
         <title>
             West End Market - 
             {% block title_block %}
