--- a/templates/west_end_market/register.html
+++ b/templates/west_end_market/register.html
@@ -6,23 +6,59 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Register for Rango</h1>
-    {% if registered %}
-        Rango says: <strong>thank you for registering!</strong>
-        <a href="{% url 'index' %}">Return to the homepage.</a><br />
-    {% else %}
-        Rango says: <strong>register here!</strong><br />
-        <form id="user_form" method="post" action="{% url 'register' %}"
-        enctype="multipart/form-data">
+<div class="container margin-top-30">
+    <form id="listing_form" method = 'post' enctype="multipart/form-data" action="{% url 'register' %}">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-md-4">
+                <h3>User Registration</h3>
+                <div class="text-center">
+                    <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=200 height=200>
+                </div>
+                        
+                <div class="form-group text-center font-weight-bold ">
+                    <label>Upload Image:</label>
+                    <input required id="id_picture" type="file" name="picture" onchange="readURL(this);">
+                    <br>
+                </div>
+            </div>
+                    
+            <div class="col-md-8">
+                <div class="form-group font-weight-bold">
+                    <label>Username:</label>
+                    <input required id="id_username" type="text" class="form-control font-italic" placeholder="i.e John Mathew" name="title">
+                    <p class="text-left helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
+                </div>
+                <div class="form-group font-weight-bold">
+                    <label>Email address:</label>
+                    <input required id="id_email" type="text" class="form-control font-italic" placeholder="myusername@gmail.com" name="price">
+                </div>
+                <div class="form-group font-weight-bold">
+                    <label>Password:</label>
+                    <input required id="id_passwords" type="text" class="form-control font-italic" placeholder="Password" name="postcode">
+                </div>
+                        
+                <div class="text-right">
+                    <button class="btn btn-outline-primary" type="submit" value="submit" >Register</button>
+                </div>
+            </div>
+        </div>       
+    </form>
+    
+</div>
+<script type="text/javascript">
+//previews the photo before upload, called when picture is selected
+function readURL(input) {
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
 
-    {% csrf_token %}
+        reader.onload = function(e) {
+            $('#id_placeholder').attr({'src': e.target.result});
+        }
 
-     <!-- Display each form -->
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
+    reader.readAsDataURL(input.files[0]);
+  }
+}
 
- <!-- Provide a button to click to submit the form. -->
-     <input type="submit" name="submit" value="Register" />
-     </form>
-    {% endif %}
- {% endblock %}
+</script>
+{% endblock %}  
