--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="margin-top-30">
-                <h5 class="text-center">If you do not have an account, <a href="#">click here</a> to register</h5>
+                <h5 class="text-center">If you do not have an account, <a href="{% url 'register' %}">click here</a> to register</h5>
 
                 </div>
             </div>
