--- a/templates/west_end_market/register.html
+++ b/templates/west_end_market/register.html
@@ -6,6 +6,10 @@
 {% endblock %}
 
 {% block body_block %}
+{% if registered %}
+    You have successfully created a new account!
+    <a href=" {% url 'login' %} ">Click here to login!</a>
+{% endif %}
 <div class="container margin-top-30">
     <form id="listing_form" method = 'post' enctype="multipart/form-data" action="{% url 'register' %}">
         {% csrf_token %}
@@ -18,24 +22,28 @@
                         
                 <div class="form-group text-center font-weight-bold ">
                     <label>Upload Image:</label>
-                    <input required id="id_picture" type="file" name="picture" onchange="readURL(this);">
+                    <input id="id_picture" type="file" name="picture" onchange="readURL(this);">
                     <br>
                 </div>
             </div>
-                    
+
             <div class="col-md-8">
+                <div>
+                {{user_form.errors}}
+                {{profile_form.errors}}
+            </div>
                 <div class="form-group font-weight-bold">
                     <label>Username:</label>
-                    <input required id="id_username" type="text" class="form-control font-italic" placeholder="i.e John Mathew" name="title">
+                    <input required id="id_username" type="username" class="form-control font-italic" placeholder="i.e John Mathew" name="username">
                     <p class="text-left helptext">Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
                 </div>
                 <div class="form-group font-weight-bold">
                     <label>Email address:</label>
-                    <input required id="id_email" type="text" class="form-control font-italic" placeholder="myusername@gmail.com" name="price">
+                    <input required id="id_email" type="email" class="form-control font-italic" placeholder="myusername@gmail.com" name="email">
                 </div>
                 <div class="form-group font-weight-bold">
                     <label>Password:</label>
-                    <input required id="id_passwords" type="text" class="form-control font-italic" placeholder="Password" name="postcode">
+                    <input required id="id_password" type="password" class="form-control font-italic" placeholder="Password" name="password">
                 </div>
                         
                 <div class="text-right">
